--- a/03_Vista_camara_y_escena/examples/02_dafault_view_rectangle.html
+++ b/03_Vista_camara_y_escena/examples/02_dafault_view_rectangle.html
@@ -38,13 +38,13 @@
          navigationHelpButton: false,
       });
 
-      // Cesium.Camera.DEFAULT_VIEW_RECTANGLE
-      // https://cesium.com/learn/cesiumjs/ref-doc/Camera.html#.DEFAULT_VIEW_RECTANGLE
       /*
-      La propiedad Cesium.Camera.DEFAULT_VIEW_RECTANGLE es una propiedad estática que define el rectángulo
-       de vista predeterminado para la cámara. Propiedad solo de lectura.
-      */
+       La propiedad Cesium.Camera.DEFAULT_VIEW_RECTANGLE es una propiedad
+       estática que define el rectángulo de vista predeterminado para la cámara. 
+       Propiedad solo de lectura.
 
+       📘 Doc: https://cesium.com/learn/cesiumjs/ref-doc/Camera.html#.DEFAULT_VIEW_RECTANGLE
+      */
       console.log(Cesium.Camera.DEFAULT_VIEW_RECTANGLE);
    </script>
 </body>
