--- a/05_Capas_raster/examples/03_OpenStreetMapImageryProvider.html
+++ b/05_Capas_raster/examples/03_OpenStreetMapImageryProvider.html
@@ -26,7 +26,10 @@
         const osmProvider = new Cesium.OpenStreetMapImageryProvider({
             url : 'https://tile.openstreetmap.org/'
         });
-        viewer.imageryLayers.addImageryProvider(osmProvider);
+
+       const provider = new Cesium.ImageryLayer(osmProvider);
+
+       viewer.imageryLayers.add(provider);
 
     </script>
 </body>
