--- a/05_Capas_raster/examples/02_UrlTemplateImageryProvider.html
+++ b/05_Capas_raster/examples/02_UrlTemplateImageryProvider.html
@@ -23,13 +23,16 @@
 
         const viewer = new Cesium.Viewer("map");
 
-        const osmProvider = new Cesium.UrlTemplateImageryProvider({
+        const mierune_mono = new Cesium.UrlTemplateImageryProvider({
             url: 'https://tile.mierune.co.jp/mierune_mono/{z}/{x}/{y}.png',
             credit: new Cesium.Credit(
                 "Maptiles by <a href='http://mierune.co.jp' target='_blank'>MIERUNE</a>, under CC BY. Data by <a href='http://osm.org/copyright' target='_blank'>OpenStreetMap</a> contributors, under ODbL."
             ),
         });
-        viewer.imageryLayers.addImageryProvider(osmProvider);
+
+        const provider = new Cesium.ImageryLayer(mierune_mono);
+
+        viewer.imageryLayers.add(provider);
 
     </script>
 </body>
