--- a/05_Capas_raster/examples/05_TileMapServiceImageryProvider.html
+++ b/05_Capas_raster/examples/05_TileMapServiceImageryProvider.html
@@ -37,8 +37,9 @@
             url: 'https://tms-ign-base.idee.es/1.0.0/IGNBaseTodo/{z}/{x}/{reverseY}.jpeg',
         });
         
-        viewer.imageryLayers.addImageryProvider(tms);
+        const provider = new Cesium.ImageryLayer(tms);
 
+        viewer.imageryLayers.add(provider);
     </script>
 </body>
 
